RESOLVED FIXED266711
[WPE][Debug] ASSERTION FAILED: m_wrapper
https://bugs.webkit.org/show_bug.cgi?id=266711
Summary [WPE][Debug] ASSERTION FAILED: m_wrapper
Vitaly Dyackhov
Reported 2023-12-20 08:47:30 PST
fast/mediastream/microphone-change-while-capturing.html media/modern-media-controls/audio/audio-controls-styles.html webrtc/canvas-to-peer-connection.html webrtc/release-after-getting-track.html ``` #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007f33253c60ff in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007f332bbd63eb in WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const (this=0x7f3309bc4a80, scriptExecutionContext=...) at /app/webkit/Source/WebCore/bindings/js/JSEventListener.h:164 #3 0x00007f332bbd45f1 in WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) (this=0x7f3309bc4a80, scriptExecutionContext=..., event=...) at /app/webkit/Source/WebCore/bindings/js/JSEventListener.cpp:142 #4 0x00007f332c5042fe in WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) (this=0x7f30c1013390, event=..., listeners=..., phase=WebCore::EventTarget::EventInvokePhase::Bubbling) at /app/webkit/Source/WebCore/dom/EventTarget.cpp:371 #5 0x00007f332c503d5f in WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) (this=0x7f30c1013390, event=..., phase=WebCore::EventTarget::EventInvokePhase::Bubbling) at /app/webkit/Source/WebCore/dom/EventTarget.cpp:302 #6 0x00007f332c503a5d in WebCore::EventTarget::dispatchEvent(WebCore::Event&) (this=0x7f30c1013390, event=...) at /app/webkit/Source/WebCore/dom/EventTarget.cpp:256 #7 0x00007f332ccfa6cd in operator()() const (__closure=0x7f3309d829e8) at /app/webkit/Source/WebCore/html/track/TrackListBase.cpp:153 #8 0x00007f332cd0b434 in WTF::Detail::CallableWrapper<WebCore::TrackListBase::scheduleChangeEvent()::<lambda()>, void>::call(void) (this=0x7f3309d829e0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #9 0x00007f3325dcb44d in WTF::Function<void ()>::operator()() const (this=0x7f3309d952d8) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #10 0x00007f332cd0c7e8 in WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::TrackListBase>(WebCore::TrackListBase&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}::operator()() const (__closure=0x7f3309d952c8) at /app/webkit/Source/WebCore/dom/ActiveDOMObject.h:112 #11 0x00007f332cd152f2 in WTF::Detail::CallableWrapper<WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::TrackListBase>(WebCore::TrackListBase&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}, void>::call() (this=0x7f3309d952c0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #12 0x00007f3325dcb44d in WTF::Function<void ()>::operator()() const (this=0x7f3309d92ff0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #13 0x00007f332c4eaa96 in WebCore::EventLoopFunctionDispatchTask::execute() (this=0x7f3309d92fd0) at /app/webkit/Source/WebCore/dom/EventLoop.cpp:469 #14 0x00007f332c4e64dd in WebCore::EventLoop::run(std::optional<WTF::ApproximateTime>) (this=0x7f33090b1ef0, deadline=std::optional<WTF::ApproximateTime> = {...}) at /app/webkit/Source/WebCore/dom/EventLoop.cpp:327 #15 0x00007f332c6c27a3 in WebCore::WindowEventLoop::didReachTimeToRun() (this=0x7f33090b1ef0) at /app/webkit/Source/WebCore/dom/WindowEventLoop.cpp:193 #16 0x00007f332c6dc05a in std::__invoke_impl<void, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(std::__invoke_memfun_deref, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) (__f=@0x7f3309250868: (void (WebCore::WindowEventLoop::*)(WebCore::WindowEventLoop * const)) 0x7f332c6c270a <WebCore::WindowEventLoop::didReachTimeToRun()>, __t=@0x7f3309250878: 0x7f33090b1ef0) at /usr/include/c++/13.2.0/bits/invoke.h:74 #17 0x00007f332c6dbfc5 in std::__invoke<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) (__fn=@0x7f3309250868: (void (WebCore::WindowEventLoop::*)(WebCore::WindowEventLoop * const)) 0x7f332c6c270a <WebCore::WindowEventLoop::didReachTimeToRun()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #18 0x00007f332c6dbf3b in std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f3309250868, __args=...) at /usr/include/c++/13.2.0/functional:506 #19 0x00007f332c6dbecd in std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::operator()<, void>() (this=0x7f3309250868) at /usr/include/c++/13.2.0/functional:591 #20 0x00007f332c6dbe96 in WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>, void>::call() (this=0x7f3309250860) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #21 0x00007f3325dcb44d in WTF::Function<void ()>::operator()() const (this=0x7f33090b2018) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #22 0x00007f3325edb27e in WebCore::Timer::fired() (this=0x7f33090b1fd8) at /app/webkit/WebKitBuild/WPE/Debug/WebCore/PrivateHeaders/WebCore/Timer.h:150 #23 0x00007f332d644ba2 in WebCore::ThreadTimers::sharedTimerFiredInternal() (this=0x7f33090f4c00) at /app/webkit/Source/WebCore/platform/ThreadTimers.cpp:125 #24 0x00007f332d64447f in operator()() const (__closure=0x7f3309000e78) at /app/webkit/Source/WebCore/platform/ThreadTimers.cpp:65 #25 0x00007f332d646cac in WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::<lambda()>, void>::call(void) (this=0x7f3309000e70) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #26 0x00007f3325dcb44d in WTF::Function<void ()>::operator()() const (this=0x7f332fc4f8c8 <WebCore::MainThreadSharedTimer::singleton()::instance+8>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #27 0x00007f332d5f1f44 in WebCore::MainThreadSharedTimer::fired() (this=0x7f332fc4f8c0 <WebCore::MainThreadSharedTimer::singleton()::instance>) at /app/webkit/Source/WebCore/platform/MainThreadSharedTimer.cpp:83 #28 0x00007f332d5fbcbc in std::__invoke_impl<void, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(std::__invoke_memfun_deref, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) (__f=@0x7f33090f1d48: (void (WebCore::MainThreadSharedTimer::*)(WebCore::MainThreadSharedTimer * const)) 0x7f332d5f1ebc <WebCore::MainThreadSharedTimer::fired()>, __t=@0x7f33090f1d58: 0x7f332fc4f8c0 <WebCore::MainThreadSharedTimer::singleton()::instance>) at /usr/include/c++/13.2.0/bits/invoke.h:74 #29 0x00007f332d5fbc35 in std::__invoke<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) (__fn=@0x7f33090f1d48: (void (WebCore::MainThreadSharedTimer::*)(WebCore::MainThreadSharedTimer * const)) 0x7f332d5f1ebc <WebCore::MainThreadSharedTimer::fired()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #30 0x00007f332d5fbbab in std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f33090f1d48, __args=...) at /usr/include/c++/13.2.0/functional:506 #31 0x00007f332d5fbb3d in std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::operator()<, void>() (this=0x7f33090f1d48) at /usr/include/c++/13.2.0/functional:591 #32 0x00007f332d5fbb06 in WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>, void>::call() (this=0x7f33090f1d40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #33 0x00007f3325dcb44d in WTF::Function<void ()>::operator()() const (this=0x7f332fc4f8f8 <WebCore::MainThreadSharedTimer::singleton()::instance+56>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #34 0x00007f3325edb38c in WTF::RunLoop::Timer::fired() (this=0x7f332fc4f8d0 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RunLoop.h:193 #35 0x00007f33292f7439 in operator()(gpointer) const (__closure=0x0, userData=0x7f332fc4f8d0 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:177 #36 0x00007f33292f7479 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:181 #37 0x00007f33292f6983 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x55c0b85a1ee0, callback=0x7f33292f745c <_FUN(gpointer)>, userData=0x7f332fc4f8d0 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #38 0x00007f33292f69d1 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #39 0x00007f331a850d36 in g_main_dispatch (context=0x55c0b823e120) at ../glib/gmain.c:3460 #40 g_main_context_dispatch (context=0x55c0b823e120) at ../glib/gmain.c:4200 #41 0x00007f331a8ae2b8 in g_main_context_iterate.isra.0 (context=0x55c0b823e120, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #42 0x00007f331a8503ff in g_main_loop_run (loop=0x55c0b823e260) at ../glib/gmain.c:4479 #43 0x00007f33292f7044 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #44 0x00007f3326da5a53 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7fff6ec932e0, argc=4, argv=0x7fff6ec934a8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #45 0x00007f3326da28bb in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7fff6ec934a8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #46 0x00007f3326d9ea85 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7fff6ec934a8) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:75 #47 0x000055c0b6f2a8e9 in main(int, char**) (argc=4, argv=0x7fff6ec934a8) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31 ```
Attachments
Vitaly Dyackhov
Comment 1 2023-12-20 08:58:59 PST
EWS
Comment 2 2023-12-20 09:08:19 PST
Test gardening commit 272353@main (36acd0ab131c): <https://commits.webkit.org/272353@main> Reviewed commits have been landed. Closing PR #22113 and removing active labels.
Vitaly Dyackhov
Comment 3 2024-01-05 01:43:19 PST
Also these two: fast/mediastream/applyConstraints-deviceId.html fast/mediastream/MediaStream-video-element-enter-background.html
Vitaly Dyackhov
Comment 4 2024-01-05 01:50:15 PST
EWS
Comment 5 2024-01-05 01:55:06 PST
Test gardening commit 272681@main (05f0643b310f): <https://commits.webkit.org/272681@main> Reviewed commits have been landed. Closing PR #22426 and removing active labels.
Vitaly Dyackhov
Comment 6 2024-01-12 05:58:38 PST
Another failing with similar symptoms but a slightly different stack trace is `fast/editing/create-link-inline-style-change-crash-001.html`: ``` #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007f857935ee10 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007f857fbca5d7 in WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const (this=0x7f855d6f0cc0, scriptExecutionContext=...) at /app/webkit/Source/WebCore/bindings/js/JSEventListener.h:164 #3 0x00007f857fbc87dd in WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) (this=0x7f855d6f0cc0, scriptExecutionContext=..., event=...) at /app/webkit/Source/WebCore/bindings/js/JSEventListener.cpp:142 #4 0x00007f85804fa562 in WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) (this=0x7f845607f4f0, event=..., listeners=..., phase=WebCore::EventTarget::EventInvokePhase::Bubbling) at /app/webkit/Source/WebCore/dom/EventTarget.cpp:366 #5 0x00007f85804f9fc3 in WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) (this=0x7f845607f4f0, event=..., phase=WebCore::EventTarget::EventInvokePhase::Bubbling) at /app/webkit/Source/WebCore/dom/EventTarget.cpp:297 #6 0x00007f85804dcbe5 in WebCore::EventContext::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) const (this=0x7fff20ccd410, event=..., phase=WebCore::EventTarget::EventInvokePhase::Bubbling) at /app/webkit/Source/WebCore/dom/EventContext.cpp:97 #7 0x00007f85804dd19f in WebCore::dispatchEventInDOM(WebCore::Event&, WebCore::EventPath const&) (event=..., path=...) at /app/webkit/Source/WebCore/dom/EventDispatcher.cpp:109 #8 0x00007f85804ddd15 in WebCore::EventDispatcher::dispatchEvent(WebCore::Node&, WebCore::Event&) (node=..., event=...) at /app/webkit/Source/WebCore/dom/EventDispatcher.cpp:228 #9 0x00007f858059c24b in WebCore::Node::dispatchEvent(WebCore::Event&) (this=0x7f845607f4f0, event=...) at /app/webkit/Source/WebCore/dom/Node.cpp:2502 #10 0x00007f858097ac3d in operator()() const (__closure=0x7f855d30b208) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:5035 #11 0x00007f858099fd44 in WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::layoutSizeChanged()::<lambda()>, void>::call(void) (this=0x7f855d30b200) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #12 0x00007f8579d6904b in WTF::Function<void ()>::operator()() const (this=0x7f855daae498) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #13 0x00007f85809a526a in WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::HTMLMediaElement>(WebCore::HTMLMediaElement&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}::operator()() const (__closure=0x7f855daae488) at /app/webkit/Source/WebCore/dom/ActiveDOMObject.h:112 #14 0x00007f85809da186 in WTF::Detail::CallableWrapper<WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::HTMLMediaElement>(WebCore::HTMLMediaElement&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}, void>::call() (this=0x7f855daae480) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #15 0x00007f8579d6904b in WTF::Function<void ()>::operator()() const (this=0x7f855d9c2870) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #16 0x00007f85804e4640 in WebCore::EventLoopFunctionDispatchTask::execute() (this=0x7f855d9c2850) at /app/webkit/Source/WebCore/dom/EventLoop.cpp:469 #17 0x00007f85804e00b9 in WebCore::EventLoop::run(std::optional<WTF::ApproximateTime>) (this=0x7f855d144210, deadline=std::optional<WTF::ApproximateTime> = {...}) at /app/webkit/Source/WebCore/dom/EventLoop.cpp:327 #18 0x00007f85806bec27 in WebCore::WindowEventLoop::didReachTimeToRun() (this=0x7f855d144210) at /app/webkit/Source/WebCore/dom/WindowEventLoop.cpp:193 #19 0x00007f85806d60c8 in std::__invoke_impl<void, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(std::__invoke_memfun_deref, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) (__f=@0x7f855d0a2a88: (void (WebCore::WindowEventLoop::*)(WebCore::WindowEventLoop * const)) 0x7f85806beb8e <WebCore::WindowEventLoop::didReachTimeToRun()>, __t=@0x7f855d0a2a98: 0x7f855d144210) at /usr/include/c++/13.2.0/bits/invoke.h:74 #20 0x00007f85806d6033 in std::__invoke<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) (__fn=@0x7f855d0a2a88: (void (WebCore::WindowEventLoop::*)(WebCore::WindowEventLoop * const)) 0x7f85806beb8e <WebCore::WindowEventLoop::didReachTimeToRun()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #21 0x00007f85806d5fa9 in std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f855d0a2a88, __args=...) at /usr/include/c++/13.2.0/functional:506 #22 0x00007f85806d5f3b in std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::operator()<, void>() (this=0x7f855d0a2a88) at /usr/include/c++/13.2.0/functional:591 #23 0x00007f85806d5f04 in WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>, void>::call() (this=0x7f855d0a2a80) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #24 0x00007f8579d6904b in WTF::Function<void ()>::operator()() const (this=0x7f855d144338) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #25 0x00007f8579e78cb0 in WebCore::Timer::fired() (this=0x7f855d1442f8) at /app/webkit/WebKitBuild/WPE/Debug/WebCore/PrivateHeaders/WebCore/Timer.h:150 #26 0x00007f8581636a3e in WebCore::ThreadTimers::sharedTimerFiredInternal() (this=0x7f855d0f0c60) at /app/webkit/Source/WebCore/platform/ThreadTimers.cpp:125 #27 0x00007f858163631b in operator()() const (__closure=0x7f855d000e78) at /app/webkit/Source/WebCore/platform/ThreadTimers.cpp:65 #28 0x00007f8581638b48 in WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::<lambda()>, void>::call(void) (this=0x7f855d000e70) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #29 0x00007f8579d6904b in WTF::Function<void ()>::operator()() const (this=0x7f8583c6fa88 <WebCore::MainThreadSharedTimer::singleton()::instance+8>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #30 0x00007f85815e3d62 in WebCore::MainThreadSharedTimer::fired() (this=0x7f8583c6fa80 <WebCore::MainThreadSharedTimer::singleton()::instance>) at /app/webkit/Source/WebCore/platform/MainThreadSharedTimer.cpp:83 #31 0x00007f85815edada in std::__invoke_impl<void, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(std::__invoke_memfun_deref, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) (__f=@0x7f855d0edde8: (void (WebCore::MainThreadSharedTimer::*)(WebCore::MainThreadSharedTimer * const)) 0x7f85815e3cda <WebCore::MainThreadSharedTimer::fired()>, __t=@0x7f855d0eddf8: 0x7f8583c6fa80 <WebCore::MainThreadSharedTimer::singleton()::instance>) at /usr/include/c++/13.2.0/bits/invoke.h:74 #32 0x00007f85815eda53 in std::__invoke<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) (__fn=@0x7f855d0edde8: (void (WebCore::MainThreadSharedTimer::*)(WebCore::MainThreadSharedTimer * const)) 0x7f85815e3cda <WebCore::MainThreadSharedTimer::fired()>) at /usr/include/c++/13.2.0/bits/invoke.h:96 #33 0x00007f85815ed9c9 in std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f855d0edde8, __args=...) at /usr/include/c++/13.2.0/functional:506 #34 0x00007f85815ed95b in std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::operator()<, void>() (this=0x7f855d0edde8) at /usr/include/c++/13.2.0/functional:591 #35 0x00007f85815ed924 in WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>, void>::call() (this=0x7f855d0edde0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #36 0x00007f8579d6904b in WTF::Function<void ()>::operator()() const (this=0x7f8583c6fab8 <WebCore::MainThreadSharedTimer::singleton()::instance+56>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #37 0x00007f8579e78dbe in WTF::RunLoop::Timer::fired() (this=0x7f8583c6fa90 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RunLoop.h:193 #38 0x00007f857d2c8501 in operator()(gpointer) const (__closure=0x0, userData=0x7f8583c6fa90 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:177 #39 0x00007f857d2c8541 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:181 #40 0x00007f857d2c7a4b in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x561c07bea7a0, callback=0x7f857d2c8524 <_FUN(gpointer)>, userData=0x7f8583c6fa90 <WebCore::MainThreadSharedTimer::singleton()::instance+16>) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #41 0x00007f857d2c7a99 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #42 0x00007f856e796d36 in g_main_dispatch (context=0x561c07887120) at ../glib/gmain.c:3460 #43 g_main_context_dispatch (context=0x561c07887120) at ../glib/gmain.c:4200 #44 0x00007f856e7f42b8 in g_main_context_iterate.isra.0 (context=0x561c07887120, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #45 0x00007f856e7963ff in g_main_loop_run (loop=0x561c07887260) at ../glib/gmain.c:4479 #46 0x00007f857d2c810c in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #47 0x00007f857ad4434b in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7fff20cce080, argc=4, argv=0x7fff20cce248) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #48 0x00007f857ad3fe83 in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7fff20cce248) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #49 0x00007f857ad362c5 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7fff20cce248) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:75 #50 0x0000561c05cc68e9 in main(int, char**) (argc=4, argv=0x7fff20cce248) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31 ``` Note `WebCore::HTMLMediaElement::layoutSizeChanged()` in the stack trace. It's weird because the test doesn't create any `HTMLMediaElement`. This might be some leftover task from previous tests running by the same instance of WKTR.
Vitaly Dyackhov
Comment 7 2024-01-12 06:05:40 PST
EWS
Comment 8 2024-01-12 06:09:43 PST
Test gardening commit 272971@main (6dcf62222987): <https://commits.webkit.org/272971@main> Reviewed commits have been landed. Closing PR #22706 and removing active labels.
Vitaly Dyackhov
Comment 9 2024-05-01 03:03:19 PDT
Fujii Hironori
Comment 10 2024-05-01 17:11:36 PDT
*** Bug 270132 has been marked as a duplicate of this bug. ***
EWS
Comment 11 2024-05-03 07:38:24 PDT
Committed 278319@main (7c46c2f8a211): <https://commits.webkit.org/278319@main> Reviewed commits have been landed. Closing PR #27978 and removing active labels.
Radar WebKit Bug Importer
Comment 12 2024-05-03 07:39:15 PDT
Note You need to log in before you can comment on or make changes to this bug.