Cherry-pick 278319@main (7c46c2f8a211). https://bugs.webkit.org/show_bug.cgi?id=266711

[WPE][Debug] ASSERTION FAILED: m_wrapper
    https://bugs.webkit.org/show_bug.cgi?id=266711

    Reviewed by Chris Dumez.

    We should not dispatch the "resize" event if `ScriptExecutionContext`
    has already been stopped.

    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::layoutSizeChanged):

    Canonical link: https://commits.webkit.org/278319@main

Canonical link: https://commits.webkit.org/274313.254@webkitglib/2.44